syntax = "proto3";

package admin.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "api/admin/v1;v1";


service Admin {
  //
  rpc GetOrganizations (google.protobuf.Empty) returns (GetOrganizationsReply) {
    option (google.api.http) = {
      get: "/api/organization"
    };
  }

  //
  rpc GetGeofences (GetGeofencesReq) returns (GetGetGeofencesReply) {
    option (google.api.http) = {
      get: "/api/organization/{id}"
    };
  }

  //
  rpc GetPositionsHistory (GetPositionsHistoryReq) returns (GetPositionsHistoryReply) {
    option (google.api.http) = {
      get: "/api/trail/{id}"
    };
  }
}


message Position  {
  string VehicleId = 1;
  string OrgId = 2;
  int64  Timestamp = 3;
  double  Longitude = 4;
  double Latitude = 5;
  int32  Heading = 6;
  bool  DoorsOpen = 7;
  double Speed = 8;
}

message Organization {
  string Id = 1;
  string Name = 2;
}

message Geofence  {
  string Name = 1;
  double Longitude = 2;
  double Latitude = 3;
  double RadiusInMeters = 4;
  repeated string VehiclesInZone = 5;
}

message GetOrganizationsReq {

}

message GetOrganizationsReply {
  repeated Organization Organizations = 1;
}

message GetPositionsHistoryReq {
  string id = 1;
}

message GetPositionsHistoryReply {
  repeated Position Positions = 1;
}

message GetGeofencesReq {
  string id = 1;
}

message GetGetGeofencesReply  {
  string Id = 1;
  string Name = 2;
  repeated Geofence Geofences = 3;
}
